# FXboard

./: .gitignore  BACKGROUND_MODE.md  BUILD_SUCCESS.md  CHANGELOG.md  CMakeLists.txt  KEYBOARD_GUIDE.md  MODERN_UI_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  RHYTHM_GAME_GUIDE.md  RUNNING.md  SAMPLES_GUIDE.md  TODO.MD  USAGE.md  build.sh  download_samples.sh  generate_rhythm_samples.py  generate_samples.py  generate_samples_simple.py  rhythm_config.json  run_with_input.sh  start.sh
config/: 99-fxboard.rules  fxboard.json.example
docs/: CONFIG.md  DEVELOPMENT.md  DOCS_INDEX.md  INSTALL.md  PROJECT_OVERVIEW.md  QUICKSTART_KR.md  TESTING.md  TEST_REPORT.md  UPGRADING.md  idea.md
samples/: README.md
scripts/: build.sh  install.sh  setup_permissions.sh  test.sh
src/: main.cpp
src/app/: ConfigManager.cpp  ConfigManager.h  MainApp.cpp  MainApp.h  ModernUI.h  RhythmGameUI.h  SettingsWindow.cpp  SettingsWindow.h
src/audio/: AudioEngine.cpp  AudioEngine.h  FX.cpp  FX.h  Mixer.cpp  Mixer.h  SampleManager.cpp  SampleManager.h
src/core/: Application.cpp  Application.h  EventQueue.h  KeyEvent.h  Smoother.h
src/input/: KeyHook.cpp  KeyHook.h  KeyState.h
